res/examples/invalid/const_decl_untyped_sets_env_type_reassign_type_mismatch.eg
const a = 123;
a = "foo";

// out: SyntaxError: `a` is a const value and can't be reassigned
// out: TypeError: mismatched types: expected type `number` but received `string`